Cập nhật bài viết I2C - hoàn thiện

--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -54,7 +54,7 @@ Thông điệp cũng bao gồm **điều kiện khởi động** và **điều k
 
 #### **Start condition (Điều khiện bắt đầu)**
 
-Bất cứ khi nào một thiết bị chủ / IC quyết định bắt đầu một giao dịch, nó sẽ **chuyển mạch SDA từ mức điện áp cao xuống mức điện áp thấp** sau đó **đường SCL chuyển từ cao xuống thấp**.
+Bất cứ khi nào một thiết bị chủ **Master muốn truyền dữ liệu**, nó sẽ **chuyển mạch SDA từ mức điện áp cao xuống mức điện áp thấp** sau đó **đường SCL chuyển từ cao xuống thấp**.
 
 > **Khi điều kiện bắt đầu được gửi** bởi thiết bị Master, tất cả các thiết bị **Slave đều hoạt động** ngay cả khi chúng **ở chế độ ngủ (sleep mode) và đợi bit địa chỉ**.
 
@@ -66,11 +66,16 @@ Bất cứ khi nào một thiết bị chủ / IC quyết định bắt đầu m
 
 #### **Bit Read/Write**
 
-Bit này xác định hướng truyền dữ liệu. Nếu thiết bị Master / IC cần gửi dữ liệu đến thiết bị Slave, bit này được thiết lập là ‘0’. Nếu IC Master cần nhận dữ liệu từ thiết bị Slave, bit này được thiết lập là ‘1’.
+Bit này xác định hướng truyền dữ liệu. 
+- Nếu thiết bị **Master cần gửi dữ liệu đến thiết bị Slave**, bit này được **thiết lập là ‘0’**. 
+- Nếu **Master cần nhận dữ liệu từ thiết bị Slave**, bit này được **thiết lập là ‘1’**.
 
 #### **Bit ACK / NACK**
 
-ACK / NACK là viết tắt của Acknowledged/Not-Acknowledged. Nếu địa chỉ vật lý của bất kỳ thiết bị Slave nào trùng với địa chỉ được thiết bị Master phát, giá trị của bit này được set là ‘0’ bởi thiết bị Slave. Ngược lại, nó vẫn ở mức logic ‘1’ (mặc định).
+ACK / NACK là viết tắt của Acknowledged/Not-Acknowledged. 
+- **Giá trị của bit này được set bởi thiết bị Slave**.
+- Nếu địa chỉ vật lý của bất kỳ thiết bị Slave nào trùng với địa chỉ được thiết bị Master phát, giá trị của bit này được set là ‘0’ bởi thiết bị Slave. 
+- Ngược lại, nó vẫn ở mức logic ‘1’ (mặc định).
 
 #### **Khối dữ liệu**
 
@@ -137,28 +142,26 @@ Lập trình **Master** hoặc **Slave** ở **STM32F4**:
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 4.png)
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 5.png)
 
 Từ sơ đồ nguyên lý trên, **STM32F4XX làm Master** sẽ phát tín hiệu **truyền dữ liệu** qua **Bus I2C** đến IC **PCF8574 làm thiết bị Slave**, với output của IC PCF8574 **ngõ ra 8 bit** từ **P7 → P0**, các ngõ ra này sẽ kết nối với các chân điều khiển trên màn hình LCD như sau (kết nối theo **chuẩn 4-bit** của LCD1602 hoặc LCD2004):
 
 ##### 4-bit data
 
-| P7 | P6 | P5 | P4 |
-| --- | --- | --- | --- |
-| D7 | D6 | D5 | D4 |
+| PCF8574 | P7 | P6 | P5 | P4 |
+| --- | --- | --- | --- | --- |
+| LCD | D7 | D6 | D5 | D4 |
 
 ##### 4-bit điều khiển (chân output P3 không sử dụng)
 
-| P3 | P2 | P1 | P0 |
-| --- | --- | --- | --- |
-| X | E | RW | RS |
+| PCF8574 | P3 | P2 | P1 | P0 |
+| --- | --- | --- | --- | --- |
+| LCD | X | E | RW | RS |
 
-**Module sử dụng 4 chân** **`D7→ D4` nên chúng ta sử dụng chuẩn truyền 4 bit ( với LCD của chúng ta sử dụng driver HD44780 - Các driver củng gần tương tự cách hoạt động)**
+> Theo datasheet (driver HD44780) của màn hình LCD khi sử dụng chuẩn **truyền data 4-bit** thì sử dụng **4 chân** `D7→ D4`
+> - Các driver củng gần tương tự cách hoạt động.
 
 
-> [Difference between interfacing character 16x2 lcd in 4-bit and 8-bit mode with microcontroller (engineersgarage.com)](https://www.engineersgarage.com/lcd-in-4-bit-mode-and-8-bit-mode/)
-
-Việc đầu tiên, là chúng ta xem giá trị địa chỉ của Slave IC trên module I2C-LCD là bao nhiêu?
+Việc đầu tiên, là chúng ta tìm xem giá trị địa chỉ của Slave IC trên module I2C-LCD là bao nhiêu?
 
 Tạo Project bằng phần mềm MXCube: Enable I2C_1, sử dụng mode Speed SM (Standard Mode)
 
@@ -237,17 +240,11 @@ Chúng ta sẽ sử dụng loại **truyền 4 bit data (nibble)** theo driver H
 
 > [https://github.com/Matiasus/HD44780](https://github.com/Matiasus/HD44780)
 
-Sơ đồ chân kết nối của module:
-
-| P7 | P6 | P5 | P4 |
-| --- | --- | --- | --- |
-| D7 | D6 | D5 | D4 |
-
-| P3 | P2 | P1 | P0 |
-| --- | --- | --- | --- |
-| X | E | RW | RS |
-
-**Module sử dụng 4 chân** **`D7→ D4` nên chúng ta sử dụng chuẩn truyền 4 bit ( với LCD của chúng ta sử dụng driver HD44780 - Các driver củng gần tương tự cách hoạt động)**
+##### Mô phỏng LCD truyền nhận 4 bit không sử dụng I2C
+<a href="/img/2023-07-23-I2C-LCD-STM32/lcd-4-bit.gif" data-lightbox="LCD 4 bit không sử dụng I2C" data-title="LCD 4 bit không sử dụng I2C">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32/lcd-4-bit.gif" alt="image-1"/>
+</a>
+Chân E đóng vai trò là chân chốt (latching): Đặt chân E (Enable) lên mức cao, sau đó xuống mức thấp để latching mã lệnh.
 
 Sử dụng I2C từ **STM32F4** truyền 8 bit theo cấu trúc thứ tự bit như sau:
 
@@ -272,10 +269,17 @@ Hàm `void lcd_send_cmd (char cmd)` cho phép chúng ta gửi yêu cầu tới *
 
 Nhìn vào hình bên dưới, để gửi 4 bit thì chúng ta **gửi lần lượt 4 bit mỗi lần** (**`4 BIT UPPER: BIT 7 → BIT 4` gửi trước, `4 BIT LOWER: BIT 3 → BIT 0` gửi sau**) và tín hiệu E phải chuyển từ trạng thái **OFF(0) → ON(1)**
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 12.png)
+<a href="/img/2023-07-23-I2C-LCD-STM32/4-bit-transfer.png" data-lightbox="Datasheet 4-bit-transfer" data-title="Datasheet 4-bit-transfer">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32/4-bit-transfer.png" alt="image-1"/>
+</a>
 
-> **Màu đỏ là gửi đi trước, màu xanh lá là gửi đi sau**
-> 
+Theo thông tin từ datasheet như ảnh trên:
+
+> HD44780U có thể gửi dữ liệu theo kiểu **gửi hai lần 4 bit** (để tổng hợp thành 8 bit). Khi gửi hai lần 4 bit, **HD44780U chỉ sử dụng bốn đường bus (DB4 đến DB7) để truyền dữ liệu**, còn bốn đường bus còn lại (DB0 đến DB3) không được sử dụng. 
+>
+>**Để truyền dữ liệu theo giao diện 4 bit, HD44780U phải nhận được hai lần truyền dữ liệu, mỗi lần truyền bốn bit**. Lần truyền **đầu tiên chứa bốn bit cao** của byte dữ liệu (DB4 đến DB7), còn lần **truyền thứ hai chứa bốn bit thấp** của byte dữ liệu (DB0 đến DB3). Thứ tự truyền dữ liệu phải tuân theo quy tắc này: **bốn bit cao được truyền trước, sau đó là bốn bit thấp.**
+
+##### **Màu đỏ là gửi đi trước, màu xanh lá là gửi đi sau**
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 13.png)
 
@@ -561,31 +565,58 @@ Hình ảnh chi tiết về 9 lệnh được gửi:
 
 `lcd_send_cmd (0x30);`  được gửi 3 lần giống nhau nên tôi chụp màn hình 1 lần! 
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 24.png)
 
-`lcd_send_cmd (0x20); // 4bit mode`
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 24.png" data-lightbox="Chuỗi 9 lệnh init_lcd()" data-title="cmd = 0x30">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 24.png" alt="image-1"/>
+</a>
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 25.png)
+`lcd_send_cmd (0x20); `
 
-`lcd_send_cmd (0x28); // Function set --> DL=0 (4 bit mode), N = 1 (2 line display) F = 0 (5x8 characters)`
+// 4bit mode
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 26.png)
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 25.png" data-lightbox="Chuỗi 9 lệnh init_lcd()" data-title="cmd = 0x20">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 25.png" alt="image-1"/>
+</a>
 
-`lcd_send_cmd (0x08); //Display on/off control --> D=0,C=0, B=0 ---> display off`
+`lcd_send_cmd (0x28);`
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 27.png)
+ // Function set --> DL=0 (4 bit mode), N = 1 (2 line display) F = 0 (5x8 characters)`
 
-`lcd_send_cmd (0x01); // clear display`
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 26.png" data-lightbox="Chuỗi 9 lệnh init_lcd()" data-title="cmd = 0x28">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 26.png" alt="image-1"/>
+</a>
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 28.png)
+`lcd_send_cmd (0x08);`
 
-`lcd_send_cmd (0x06); //Entry mode set --> I/D = 1 (increment cursor) & S = 0 (no shift)`
+//Display on/off control --> D=0,C=0, B=0 ---> display off
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 29.png)
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 27.png" data-lightbox="Chuỗi 9 lệnh init_lcd()" data-title="cmd = 0x08">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 27.png" alt="image-1"/>
+</a>
 
-`lcd_send_cmd (0x0C); //Display on/off control --> D = 1, C and B = 0. (Cursor and blink, last two bits)`
+`lcd_send_cmd (0x01);`
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 30.png)
+// clear display
+
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 28.png" data-lightbox="Chuỗi 9 lệnh init_lcd()" data-title="cmd = 0x01">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 28.png" alt="image-1"/>
+</a>
+
+`lcd_send_cmd (0x06);`
+
+//Entry mode set --> I/D = 1 (increment cursor) & S = 0 (no shift)
+
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 29.png" data-lightbox="Chuỗi 9 lệnh init_lcd()" data-title="cmd = 0x06">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 29.png" alt="image-1"/>
+</a>
+
+`lcd_send_cmd (0x0C);`
+
+ //Display on/off control --> D = 1, C and B = 0. (Cursor and blink, last two bits)
+
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 30.png" data-lightbox="Chuỗi 9 lệnh init_lcd()" data-title="cmd = 0x0C">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 30.png" alt="image-1"/>
+</a>
 
 #### Gửi data lên LCD?
 
@@ -614,7 +645,9 @@ HAL_I2C_Master_Transmit (&hi2c1, SLAVE_ADDRESS_LCD << 1,(uint8_t *) data_t, 4, 1
 
 Ví dụ ta thực hiện lệnh  `lcd_send_data(0x48);	// Chữ H`
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 31.png)
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 31.png" data-lightbox="Hiển thị ký tự H" data-title="Hiển thị ký tự H">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 31.png" alt="image-1"/>
+</a>
 
 Frame đầu tiên, gửi từ MASTER tới địa chỉ `0x27` → và có tín hiêu `ACK` từ `SLAVE`, nên sẽ được gửi các frame tiếp tục sau.
 
@@ -700,7 +733,9 @@ Chúng ta quan sát I2C Master gửi 2 chuỗi ( mỗi chuỗi 5 frame) tới Sl
 - Với ký tự `O` là `0x4F` (5 frame: 1 frame địa chỉ, 4 frame để gửi chữ `O`)
 - Với ký tự `K` là `0x4B` (5 frame: 1 frame địa chỉ, 4 frame để gửi chữ `K`)
 
-![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 33.png)
+<a href="/img/2023-07-23-I2C-LCD-STM32/Untitled 33.png" data-lightbox="Hiển thị ký tự OK" data-title="Hiển thị ký tự OK">
+	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32//Untitled 33.png" alt="image-1"/>
+</a>
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 34.png)
 
@@ -803,40 +838,19 @@ void lcd_put_cur(int row, int col)
 ```
 
 
-#### CGRAM Creating custom character (đang viết)
+#### CGRAM Creating custom character
 
-As already explained, all character based LCD of type HD44780 has CGRAM area to create user defined patterns. For making custom patterns we need to write values to the CGRAM area defining which pixel to glow. These values are to be written in the CGRAM adress starting from 0x40. If you are wondering why it starts from 0x40? Then the answer is given below.
+**Vùng nhớ CGRAM (Character Generator RAM)** của màn hình LCD 1602 là **một phần của bộ nhớ trong bộ điều khiển LCD (như HD44780)** dùng để **lưu trữ các mẫu ký tự tùy chỉnh** mà người dùng có thể định nghĩa.
 
-![](https://www.8051projects.net/lcd-interfacing/cgram.gif)
+Màn hình LCD 1602 có khả năng hiển thị một số ký tự chuẩn như các ký tự số, chữ cái, dấu chấm, dấu phẩy và một số ký tự đặc biệt. Nhưng ngoài các ký tự này, nó cũng cung cấp cho người dùng khả năng tự định nghĩa các ký tự tùy chỉnh.
 
-Bit 7 is 0 and Bit 6 is 1, due to which the CGRAM adress command starts from 0x40, where the address of CGRAM (Acg) starts from 0x00. CGRAM has a total of 64 Bytes. When you are using LCD as 5x8 dots in function set then you can define a total of 8 user defined patterns (1 Byte for each row and 8 rows for each pattern), where as when LCD is working in 5x10 dots, you can define 4 user defined patterns.
+Trong bộ điều khiển LCD, bit 7 và bit 6 của thanh ghi hướng dẫn là bit CGRAM. 
 
-Lets take an of bulding a custom pattern. All we have to do is make a pixel-map of 7x5 and get the hex or decimal value or hex value for each row, bit value is 1 if pixel is glowing and bit value is 0 if pixel is off. The final 7 values are loaded to the CGRAM one by one. As i said there are 8 rows for each pattern, so last row is usually left blank (0x00) for the cursor. If you are not using cursor then you can make use of that 8th row also. so you get a bigger pattern.
+![set-CGRAM.png](/img/2023-07-23-I2C-LCD-STM32/set-CGRAM.png)
 
-To explain the above explaination in a better way. I am going to take an example. Lets make a "Bell" pattern as shown below.
+**Khi bit 7 là 0 và bit 6 là 1, lệnh địa chỉ CGRAM được tạo ra với địa chỉ bắt đầu từ 0x40**. Địa chỉ CGRAM (ACG) có thể có giá trị từ 0x00 đến 0x3F.
 
-
-<div class="post-img-post">
-    <img src="/img/2023-07-23-I2C-LCD-STM32/CGRAM addresses.webp">
- <br>
-Cấu trúc mã hex: 1 AD6 AD5 AD4 AD3 AD2 AD1 AD0
-</div>
-
-![](https://www.8051projects.net/lcd-interfacing/custom.png)
-
-Now we get the values for each row as shown.
-
-1.  Bit:  4  3  2  1  0  -  Hex
-2.  Row1:  0  0  1  0  0  -  0x04
-3.  Row2:  0  1  1  1  0  -  0x0E
-4.  Row3:  0  1  1  1  0  -  0x0E
-5.  Row4:  0  1  1  1  0  -  0x0E
-6.  Row5:  1  1  1  1  1  -  0x1F
-7.  Row6:  0  0  0  0  0  -  0x00
-8.  Row7:  0  0  1  0  0  -  0x04
-9.  Row8:  0  0  0  0  0  -  0x00
-
-We are not using row 8 as in our pattern it is not required. if you are using cursor then it is recommended not to use the 8th row. Now as we have got the values. We just need to put these values in the CGRAM. You can decided which place you want to store in. Following is the memory map for custom patterns in CGRAM.
+**Vùng nhớ CGRAM gồm 64 ô nhớ** (64 byte), mỗi ô nhớ dành cho một ký tự tùy chỉnh. **Mỗi ký tự được biểu diễn bởi một ma trận 5x8 (5 cột và 8 hàng)**, trong đó mỗi bit đại diện cho một điểm ảnh. Điều này cho phép người dùng tự định nghĩa các ký tự theo ý muốn và lưu trữ chúng vào vùng nhớ CGRAM.
 
 | Memory Map |
 | --- |
@@ -850,8 +864,60 @@ We are not using row 8 as in our pattern it is not required. if you are using cu
 | 7 | 0x30 - 0x37 |
 | 8 | 0x38 - 0x3F |
 
-We can point the cursor to CGRAM address by sending command, which is 0x40 + CGRAM address (For more information please see [Table 4 in commands section](https://www.8051projects.net/lcd-interfacing/commands.php#table4)). Lets say we want to write the Bell pattern at second pattern location. So we send the command as 0x48 (0x40 + 0x08), and then we send the pattern data. Below is a small programming example to do this.
-[LCD Tutorial for interfacing with Microcontrollers: CGRAM Creating custom character - Rickey's World of Microcontrollers & Microprocessors (8051projects.net)](https://www.8051projects.net/lcd-interfacing/lcd-custom-character.php)
+Kết hợp với Bit 7 = 0, Bit 6 = 1 ta có bảng dưới đây để sử dụng lệnh `cmd`:
+<div class="post-img-post">
+    <img src="/img/2023-07-23-I2C-LCD-STM32/CGRAM addresses.webp">
+ <br>
+Cấu trúc mã hex: 0_1_AD5_AD4 AD3_AD2_AD1_AD0
+</div>
+
+**Cách định nghĩa ký tự tùy chỉnh và lưu trữ** chúng vào vùng nhớ CGRAM thường được thực hiện bằng cách **gửi các byte dữ liệu đại diện cho các hàng của ma trận 5x8 vào các ô nhớ CGRAM** tương ứng.
+
+Dưới đây là cách định nghĩa và lưu trữ một ký tự tùy chỉnh vào vùng nhớ CGRAM của màn hình LCD 1602:
+
+1. Đầu tiên, cần di chuyển con trỏ lệnh đến vị trí ô nhớ CGRAM mà bạn muốn định nghĩa ký tự. Vị trí các ô nhớ CGRAM được đánh số từ 0 đến 7 (tổng cộng 8 ô nhớ).
+
+2. Tiếp theo, gửi 8 byte dữ liệu liên tiếp cho 8 hàng của ma trận 5x8 của ký tự tùy chỉnh. Mỗi byte đại diện cho một hàng, và mỗi bit trong byte đại diện cho một điểm ảnh (pixel) của hàng đó.
+
+3. Lặp lại quá trình trên nếu bạn muốn định nghĩa nhiều ký tự tùy chỉnh khác.
+
+Sau khi **định nghĩa các ký tự tùy chỉnh trong vùng nhớ CGRAM**, bạn có thể **gọi chúng bằng các mã lệnh tương ứng** khi muốn hiển thị chúng trên màn hình LCD.
+
+Lưu ý rằng mỗi màn hình LCD có thể có một số hạn chế về số lượng ký tự tùy chỉnh và cách lưu trữ chúng. Điều này sẽ phụ thuộc vào bộ điều khiển cụ thể được sử dụng trong màn hình LCD.
+
+*Hãy lấy một mô hình tùy chỉnh. Tất cả những gì chúng ta phải làm là tạo một bản đồ pixel 7x5 và nhận giá trị hex hoặc thập phân hoặc giá trị hex cho mỗi hàng, giá trị bit là 1 nếu pixel phát sáng và giá trị bit là 0 nếu pixel tắt. 7 giá trị cuối cùng được tải vào CGRAM từng cái một. Như tôi đã nói, có 8 hàng cho mỗi mẫu, vì vậy hàng cuối cùng thường được để trống (0x00) cho con trỏ. Nếu bạn không sử dụng con trỏ thì bạn cũng có thể sử dụng hàng thứ 8 đó. để bạn có được một mô hình lớn hơn.*
+
+Dưới đây là một ví dụ khởi tạo hình cái chuông:
+
+|Bit:  | 4 | 3 | 2 | 1 | 0 | Hex |
+|Row1: | 0 | 0 | 1 | 0 | 0 |  04 |
+|Row2: | 0 | 1 | 1 | 1 | 0 |  0E |
+|Row3: | 0 | 1 | 1 | 1 | 0 |  0E |
+|Row4: | 0 | 1 | 1 | 1 | 0 |  0E |
+|Row5: | 1 | 1 | 1 | 1 | 1 |  1F |
+|Row6: | 0 | 0 | 0 | 0 | 0 |  00 |
+|Row7: | 0 | 0 | 1 | 0 | 0 |  04 |
+|Row8: | 0 | 0 | 0 | 0 | 0 |  00 |
+
+![custom-bell.png](/img/2023-07-23-I2C-LCD-STM32/custom-bell.png)
+
+```c
+// khởi tạo mảng
+char cc0[] = {0x00, 0x04, 0x0E, 0x0E, 0x0E, 0x1F, 0x04, 0x00};  // bell
+...
+lcd_send_cmd(0x40+00);
+lcd_send_data(0x00); //hàng 1
+lcd_send_data(0x04); //hàng 2
+lcd_send_data(0x0E); //hàng 3
+lcd_send_data(0x0E); //hàng 4
+lcd_send_data(0x0E); //hàng 5
+lcd_send_data(0x1F); //hàng 6
+lcd_send_data(0x04); //hàng 7
+lcd_send_data(0x00); //hàng 8
+...
+
+lcd_send_data(0x00); // hiển thị giá tại địa chỉ 0x00
+```
 
 
 ### Big-Endian Nibble?
