Cập nhật bài viết vè I2C và LCD

--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -256,17 +256,17 @@ Chúng ta sẽ sử dụng loại **truyền 4 bit data (nibble)** theo driver H
 > Một “`nibble`” (cũng đánh vần là “`nybble`”) trong lĩnh vực CNTT cách nói là **một tập hợp dữ liệu Bốn-bit** tương đương với **một nửa của một byte**. Điều này cũng đôi khi được gọi là một `quadbit`, một nửa byte, một tetrade hoặc semi-octet.
 > 
 
-##### Mô phỏng LCD truyền nhận 4 bit không sử dụng I2C
+##### Mô phỏng LCD truyền nhận 4 bit không sử dụng I2C:
+##### Chân E đóng vai trò là chân chốt (latching): kích chân E (Enable) lên mức cao, sau đó xuống mức thấp để latching 4bit nibble.
 <a href="/img/2023-07-23-I2C-LCD-STM32/lcd-4-bit.gif" data-lightbox="LCD 4 bit không sử dụng I2C" data-title="LCD 4 bit không sử dụng I2C">
 	<img class="post-img-post" src="/img/2023-07-23-I2C-LCD-STM32/lcd-4-bit.gif" alt="image-1"/>
 </a>
-Chân E đóng vai trò là chân chốt (latching): Đặt chân E (Enable) lên mức cao, sau đó xuống mức thấp để latching mã lệnh.
 
 Sử dụng I2C từ **STM32F407VET** truyền 8 bit theo cấu trúc thứ tự bit như sau:
 
-**4 BIT CAO: BIT 7 → BIT 4**
+##### **4 BIT CAO: BIT 7 → BIT 4**
 
-**4 BIT THẤP: BIT 3 → BIT 0**
+##### **4 BIT THẤP: BIT 3 → BIT 0**
 
 
 | BIT 7 | BIT 6 | BIT 5 | BIT 4 |
