Cập nhật bài viết I2C

--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -71,7 +71,10 @@ Về lý thuyết lẫn thực tế **I²C sử dụng 7 bit để định đị
 
 Ngoài ra I2C còn có chế độ **10 bit địa chỉ** tương đương với 1024 địa chỉ, tương tự như 7 bit, **chỉ có 1008 thiết bị có thể kết nối**, còn lại 16 địa chỉ sẽ dùng để sử dụng mục đích riêng. 
 
-> Bài viết giới thiệu về I2C 10 bit địa chỉ: [I2C Ten-bit Addresses](https://www.kernel.org/doc/html/latest/i2c/ten-bit-addresses.html)
+> Bài viết giới thiệu về I2C 10-bit địa chỉ: [I2C Ten-bit Addresses](https://www.kernel.org/doc/html/latest/i2c/ten-bit-addresses.html)
+
+> Danh sách địa chỉ I2C 7-bit của các thiết bị phổ biến: [All I2C addresses here are in 7-bit format](https://learn.adafruit.com/i2c-addresses/the-list)
+
 
 Một chuỗi 7 (hoặc 10 bit) duy nhất cho mỗi Slave để xác định Slave khi Master muốn giao tiếp với nó.
 
