Cập nhật datasheet cho các bài viết

--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -161,6 +161,9 @@ Lập trình **Master** hoặc **Slave** ở **STM32F407VET**:
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 4.png)
 
+>Tài liệu về LCD-I²C: [LCD](/documents/2023-07-23-I2C-LCD-STM32/I2C_2004_LCD.pdf)
+>
+>Tài liệu về HD44780: [HD44780](/documents/2023-07-23-I2C-LCD-STM32/LCD%20HD44780U.PDF)
 
 Từ sơ đồ nguyên lý trên, **STM32F407VET làm Master** sẽ phát tín hiệu **truyền dữ liệu** qua **Bus I2C** đến IC **PCF8574 làm thiết bị Slave**, với output của IC PCF8574 **ngõ ra 8 bit** từ **P7 → P0**, các ngõ ra này sẽ kết nối với các chân điều khiển trên màn hình LCD như sau (kết nối theo **chuẩn 4-bit** của LCD1602 hoặc LCD2004):
 
