--- a/_posts/2023-07-28-I2C-DHT20-STM32.md
+++ b/_posts/2023-07-28-I2C-DHT20-STM32.md
@@ -35,7 +35,7 @@ Nếu bạn quan tâm đến việc **sử dụng cảm biến nhiệt độ và
 >
 >• Excellent long-term stability
 >
->• Fast-response and anti-interference capability
+>• **Fast-response** and **anti-interference capability**
 
 **ASIC (Application-Specific Integrated Circuit)** là một loại vi mạch tích hợp được thiết kế và tùy chỉnh để phục vụ cho một ứng dụng cụ thể. **Trong trường hợp của DHT20, ASIC sensor là một chip vi mạch tích hợp được thiết kế đặc biệt để chức năng cụ thể của cảm biến DHT20**.
 
@@ -57,16 +57,16 @@ Với việc sử dụng ASIC sensor, DHT20 trở thành một cảm biến thô
     - I²C (Inter-Integrated Circuit) là một giao thức giao tiếp số hai dây được sử dụng rộng rãi trong việc kết nối các thành phần điện tử.
 3. **Ứng dụng đa dạng:**
     - DHT20 có thể áp dụng trong nhiều lĩnh vực ứng dụng:
-        - HVAC (Heating, Ventilation, and Air Conditioning): Hệ thống điều hòa không khí.
-        - Dehumidifier: Thiết bị hút ẩm.
+        - HVAC (Heating, Ventilation, and Air Conditioning): **Hệ thống điều hòa không khí.**
+        - Dehumidifier: **Thiết bị hút ẩm**.
         - Testing and Inspection Equipment: Thiết bị kiểm tra và kiểm định.
         - Consumer Products: Sản phẩm tiêu dùng.
         - Automobiles: Ô tô.
         - Automatic Control: Điều khiển tự động.
         - Data Loggers: Thiết bị ghi dữ liệu.
-        - Weather Stations: Trạm thời tiết.
+        - Weather Stations: **Trạm thời tiết**.
         - Home Appliances: Thiết bị gia dụng.
-        - Humidity Control: Điều khiển độ ẩm.
+        - Humidity Control: **Điều khiển độ ẩm**.
         - Medical and Other Application Fields: Lĩnh vực y tế và các ứng dụng khác.
         
 
@@ -349,8 +349,14 @@ void trigger_measurement_data_dht20 ()
 	<img class="post-img-post" src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 16.png" alt="image-1"/>
 </a>
 
-`uint8_t buffer[7];` tạo mảng 7 phần tử để chưa 7 byte data nhận về từ DHT20.
-`uint32_t data_read = 0;` tạo biến để lưu giá trị tính toán độ ẩm, nhiệt độ.
+`uint8_t buffer[7];` tạo mảng 7 phần tử để **chứa 7 byte data nhận về** từ DHT20.
+`uint32_t data_read = 0;` biến để lưu giá trị tính toán độ ẩm, nhiệt độ. 
+
+Sử dụng kiểu dữ liêu **uint32_t** bởi vì mỗi gói data nhiệt độ hoặc độ ẩm chứa 20-bit data
+
+**Độ ẩm : byte1 + byte2 + 4bit cao của byte3 (20-bit)**
+
+**Nhiệt độ : 4bit thấp của byte3 + byte4 + byte5 (20-bit)**
 
 ```c
 //Trigger measurement data
@@ -404,33 +410,36 @@ void trigger_measurement_data_dht20 ()
 
 **Bước 4:**
 
-Sau khi nhận được **sáu byte (Byte 0→ Byte 5)**, **byte tiếp theo (Byte 6) là dữ liệu kiểm tra CRC**. 
+Sau khi nhận được
+- **sáu byte (Byte 0→ Byte 5)**: dữ liệu độ âm , nhiệt độ
+- **byte tiếp theo (Byte 6)**: dữ liệu kiểm tra CRC. 
 
 > Người dùng có thể đọc nó ra khi cần thiết. Nếu đầu nhận cần kiểm tra CRC, một ACK sẽ được gửi sau khi nhận được byte thứ sáu. Nếu không thì gửi NACK để kết thúc, giá trị ban đầu của CRC là 0XFF và đa thức kiểm tra CRC8 là:
-CRC [7:0] = 1+X4+X5+X8
+>
+>CRC [7:0] = 1+X4+X5+X8
 > 
 
 ```c
 ...
-			// Check Bit[7] = 0 at Byte0
-			if ((buffer[0] & 0x80) == 0x00)
+	// Check Bit[7] = 0 at Byte0
+	if ((buffer[0] & 0x80) == 0x00)
+	{
+			// Bước 4: 
+			// Check CRC buffer[0] vs buffer[6]
+			if(CheckCrc8(&buffer[0],6)==buffer[6])
 			{
-					// Bước 4: 
-					// Check CRC buffer[0] vs buffer[6]
-					if(CheckCrc8(&buffer[0],6)==buffer[6])
-					{
-						// Bước 5: 
-						printf("CRC OK \n");
-					}
-					else
-					{
-						printf("CRC fail \n");
-					}
+				// Bước 5: 
+				printf("CRC OK \n");
 			}
 			else
 			{
-				printf("Check Bit[7] at Byte0: %x \n",buffer[0]&0x80);
+				printf("CRC fail \n");
 			}
+	}
+	else
+	{
+		printf("Check Bit[7] at Byte0: %x \n",buffer[0]&0x80);
+	}
 ...
 ```
 
@@ -443,43 +452,43 @@ Tính giá trị nhiệt độ và độ ẩm
 
 ```c
 ...
-			// Check Bit[7] = 0 at Byte0
-			if ((buffer[0] & 0x80) == 0x00)
+	// Check Bit[7] = 0 at Byte0
+	if ((buffer[0] & 0x80) == 0x00)
+	{
+			// Bước 4: 
+			// Check CRC buffer[0] vs buffer[6]
+			if(CheckCrc8(&buffer[0],6)==buffer[6])
 			{
-					// Bước 4: 
-					// Check CRC buffer[0] vs buffer[6]
-					if(CheckCrc8(&buffer[0],6)==buffer[6])
-					{
-						// Bước 5: 
-						printf("CRC OK \n");
-						data_read=buffer[1]; //0x83
-						data_read=data_read<<8;//0x83 <<8 = 0x8300
-						data_read+=buffer[2]; //0x8300 + 0x30 => 0x8330
-						data_read=data_read<<8; //0x8330  <<8 = 0x833000
-						data_read+=buffer[3]; //0x833000 + 0x76 => 0x833076
-						data_read=data_read>>4;	 //0x833076 => 0x83307
-						
-						RH = (float)data_read*100/1048576;
-						printf("RH %0.1f%% \n", RH);
-						
-						data_read=buffer[3]&0x0F; //0x76 & 0x0F = 0x06
-						data_read=data_read<<8; //0x06  <<8 = 0x0600
-						data_read+=buffer[4]; //0x0600 + 0x27 = 0x0627
-						data_read=data_read<<8; //0x0627  <<8 = 0x062700
-						data_read+=buffer[5];	//0x062700 + 0xDD = 0x0627DD
-						
-						Temp = (float)data_read*200/1048576-50;
-						printf("Temp %0.1f \n", Temp);
-					}
-					else
-					{
-						printf("CRC fail \n");
-					}
+				// Bước 5: 
+				printf("CRC OK \n");
+				data_read=buffer[1]; //0x83
+				data_read=data_read<<8;//0x83 <<8 = 0x8300
+				data_read+=buffer[2]; //0x8300 + 0x30 => 0x8330
+				data_read=data_read<<8; //0x8330  <<8 = 0x833000
+				data_read+=buffer[3]; //0x833000 + 0x76 => 0x833076
+				data_read=data_read>>4;	 //0x833076 => 0x83307
+				
+				RH = (float)data_read*100/1048576;
+				printf("RH %0.1f%% \n", RH);
+				
+				data_read=buffer[3]&0x0F; //0x76 & 0x0F = 0x06
+				data_read=data_read<<8; //0x06  <<8 = 0x0600
+				data_read+=buffer[4]; //0x0600 + 0x27 = 0x0627
+				data_read=data_read<<8; //0x0627  <<8 = 0x062700
+				data_read+=buffer[5];	//0x062700 + 0xDD = 0x0627DD
+				
+				Temp = (float)data_read*200/1048576-50;
+				printf("Temp %0.1f \n", Temp);
 			}
 			else
 			{
-				printf("Check Bit[7] at Byte0: %x \n",buffer[0]&0x80);
+				printf("CRC fail \n");
 			}
+	}
+	else
+	{
+		printf("Check Bit[7] at Byte0: %x \n",buffer[0]&0x80);
+	}
 ...
 ```
 
