Cập nhật thêm nội dung bài viết.

--- a/_posts/2023-07-28-I2C-DHT20-STM32.md
+++ b/_posts/2023-07-28-I2C-DHT20-STM32.md
@@ -51,23 +51,22 @@ Nếu bạn quan tâm đến việc **sử dụng cảm biến nhiệt độ và
 Với việc sử dụng ASIC sensor, DHT20 trở thành một cảm biến thông minh, chính xác và linh hoạt, giúp đo lường và ghi nhận độ ẩm và nhiệt độ môi trường một cách hiệu quả trong nhiều ứng dụng khác nhau.
 
 1. **DHT20 là cảm biến đo độ ẩm và nhiệt độ:**
-    - Điều này cho phép nó đo lường môi trường xung quanh về hai thông số quan trọng này cùng một lúc.
+- Điều này cho phép nó đo lường môi trường xung quanh về hai thông số quan trọng này cùng một lúc.
 2. **Giao tiếp thông qua giao thức I²C:**
-    - DHT20 sử dụng giao thức giao tiếp I²C để truyền dữ liệu đo lường.
-    - I²C (Inter-Integrated Circuit) là một giao thức giao tiếp số hai dây được sử dụng rộng rãi trong việc kết nối các thành phần điện tử.
+- DHT20 sử dụng giao thức giao tiếp I²C để truyền dữ liệu đo lường.
+- I²C (Inter-Integrated Circuit) là một giao thức giao tiếp số hai dây được sử dụng rộng rãi trong việc kết nối các thành phần điện tử.
 3. **Ứng dụng đa dạng:**
-    - DHT20 có thể áp dụng trong nhiều lĩnh vực ứng dụng:
-        - HVAC (Heating, Ventilation, and Air Conditioning): **Hệ thống điều hòa không khí.**
-        - Dehumidifier: **Thiết bị hút ẩm**.
-        - Testing and Inspection Equipment: Thiết bị kiểm tra và kiểm định.
-        - Consumer Products: Sản phẩm tiêu dùng.
-        - Automobiles: Ô tô.
-        - Automatic Control: Điều khiển tự động.
-        - Data Loggers: Thiết bị ghi dữ liệu.
-        - Weather Stations: **Trạm thời tiết**.
-        - Home Appliances: Thiết bị gia dụng.
-        - Humidity Control: **Điều khiển độ ẩm**.
-        - Medical and Other Application Fields: Lĩnh vực y tế và các ứng dụng khác.
+- **HVAC (Heating, Ventilation, and Air Conditioning):** **Hệ thống điều hòa không khí.**
+- **Dehumidifier:** **Thiết bị hút ẩm**.
+- Testing and Inspection Equipment: Thiết bị kiểm tra và kiểm định.
+- Consumer Products: Sản phẩm tiêu dùng.
+- Automobiles: Ô tô.
+- Automatic Control: Điều khiển tự động.
+- Data Loggers: Thiết bị ghi dữ liệu.
+- **Weather Stations:** **Trạm thời tiết**.
+- Home Appliances: Thiết bị gia dụng.
+- **Humidity Control:** **Điều khiển độ ẩm**.
+- Medical and Other Application Fields: Lĩnh vực y tế và các ứng dụng khác.
         
 
 #### ⚙️Đặc tính độ ẩm
