Cập nhật lại hàm lcd_put_cur

--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -837,24 +837,24 @@ Trong lập trình, tôi đặt **vị trí bắt đầu là 0**
 - Ví trí của cột `col = col + 0xC0` (địa chỉ base của hàng tiếp theo)
 - ...
 ```c
+#define LCD_SETDDRAMADDR 0x80
 void lcd_put_cur(int row, int col)
 {
     switch (row)
     {
-        case 0: //hang dau tien
-            col |= 0x80;
+        case 0:
+            col = LCD_SETDDRAMADDR | (col + 0x00);
             break;
-        case 1: //hang thu 2
-            col |= 0xC0;
+        case 1:
+            col = LCD_SETDDRAMADDR | (col + 0x40);
             break;
-		case 2: //hang thu 3 (LCD 2004)
-            col |= 0x94;
+				case 2:
+            col = LCD_SETDDRAMADDR | (col + 0x14);
             break;
-        case 3: //hang thu 4 (LCD 2004)
-            col |= 0xD4;
+        case 3:
+            col = LCD_SETDDRAMADDR | (col + 0x54);
             break;
     }
-
     lcd_send_cmd (col);
 }
 ```
@@ -947,7 +947,7 @@ Dưới đây là một ví dụ khởi tạo hình cái chuông:
 // khởi tạo mảng
 char cc0[] = {0x00, 0x04, 0x0E, 0x0E, 0x0E, 0x1F, 0x04, 0x00};  // bell
 ...
-lcd_send_cmd(0x40+00);
+lcd_send_cmd(0x40+00); // lênh cmd LCD_SETCGRAMADDR
 lcd_send_data(0x00); //hàng 1
 lcd_send_data(0x04); //hàng 2
 lcd_send_data(0x0E); //hàng 3
