Cập nhật bài viết DMA ADC

--- a/_posts/2023-08-11-DMA-với-ADC.md
+++ b/_posts/2023-08-11-DMA-với-ADC.md
@@ -6,7 +6,7 @@ subtitle: "... trong STM32F4"
 bigimg:
   - "/img/2023-08-04-ADC-Regular-STM32F4/Untitled%206.png"
 image: /img/2023-08-04-ADC-Regular-STM32F4/avatar_ADC.jpg
-tags: [STM32F4, STM32, ADC, Regular, LCD2004, 12-BIT]
+tags: [STM32F4, ADC, Regular, DMA, Direct Memory Access, Circular Buffer Mode]
 category: lap-trinh-vi-dieu-khien
 # gh-repo: bangnguyendev/SmartClock
 # gh-badge: [star, watch, fork, follow]
@@ -71,7 +71,7 @@ Trong một số vi điều khiển, nhất là những dòng vi điều khiển
 
 **Dòng STM32F4** là một trong những dòng vi điều khiển của STMicroelectronics được phát triển trên nền tảng ARM Cortex-M4, và nó **hỗ trợ DMA để tối ưu hóa việc truyền dữ liệu** giữa các bộ ngoại vi và bộ nhớ mà không cần can thiệp của CPU.
 
-#### ⚙️Thông tin cơ bản:
+#### ⚙️Thông tin cơ bản
 
 Một số thông tin cơ bản về DMA trong STM32F4:
 
