Cập nhật lại link repo github

--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -8,9 +8,9 @@ bigimg:
 image: /img/2023-07-23-I2C-LCD-STM32/I2C-cover.jpg
 tags: [STM32F4, STM32, I2C, LCD1602, LCD2004, 4bit, 4-bit, Nibble, Big-Endian]
 category: lap-trinh-vi-dieu-khien
-# gh-repo: bangnguyendev/SmartClock
+gh-repo: bangnguyendev/KEIL-C-STM32F407
 # gh-badge: [star, watch, fork, follow]
-# comments: true
+comments: true
 ---
 
 I²C kết hợp các tính năng tốt nhất của SPI và UART. Với I2C, bạn có thể kết nối nhiều Slave với một master duy nhất (như SPI) và bạn có thể có nhiều master điều khiển một hoặc nhiều Slave. 
