--- a/_posts/2023-07-28-I2C-DHT20-STM32.md
+++ b/_posts/2023-07-28-I2C-DHT20-STM32.md
@@ -8,9 +8,9 @@ bigimg:
 image: /img/2023-07-28-I2C-DHT20-STM32/cover-dht20.jpg
 tags: [STM32F4, STM32, I2C, LCD1602, DTH20, Humidity, Temperature, nhiệt độ, độ ẩm]
 category: lap-trinh-vi-dieu-khien
-# gh-repo: bangnguyendev/SmartClock
+gh-repo: bangnguyendev/KEIL-C-STM32F407
 # gh-badge: [star, watch, fork, follow]
-# comments: true
+comments: true
 ---
 
 Trong bài viết hôm nay, chúng ta sẽ khám phá về **cảm biến nhiệt độ và độ ẩm DHT20** cùng với **giao thức giao tiếp I2C** (Inter-Integrated Circuit). **DHT20 là một sản phẩm mới** được nâng cấp từ phiên bản trước đó là DHT11, mang đến nhiều **cải tiến đáng kể về hiệu suất và độ chính xác** trong việc đo lường môi trường xung quanh. Đồng thời, giao thức I²C cũng đóng vai trò quan trọng trong việc kết nối cảm biến này với các vi điều khiển và các thiết bị thông minh.
