Cập nhật link repo github

--- a/_posts/2023-07-28-I2C-DHT20-STM32.md
+++ b/_posts/2023-07-28-I2C-DHT20-STM32.md
@@ -505,3 +505,5 @@ Hình ảnh trên LCD
 
 
 - *Link Project* [*I2C-DHT20-STM32F4*](https://github.com/bangnguyendev/KEIL-C-STM32F407/tree/master/I2C-DHT20-STM32F4)
+
+*Cám ơn mọi người đã theo dõi bài viết!*
