--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -1012,3 +1012,7 @@ Ví dụ lý thuyết về việc tách bit UPPER NIBBLE, LOWER NIBBLE:
 
 ![Untitled](/img/2023-07-23-I2C-LCD-STM32/Untitled 42.png)
 
+[*Project Github i2c-LCD2004*](https://github.com/bangnguyendev/KEIL-C-STM32F407/tree/master/i2c-LCD2004)
+
+*Cám ơn mọi người đã theo dõi bài viết!*
+
