Update source code

--- a/_posts/2023-07-28-I2C-DHT20-STM32.md
+++ b/_posts/2023-07-28-I2C-DHT20-STM32.md
@@ -75,7 +75,7 @@ Thông số làm việc từ **0-100%**
 Tuy nhiên, **hoạt động chính xác tối ưu ở dãy 30% - 80%**, ngoài dãy hoạt động trên cảm biến cần thời gian để **tự động hiệu chỉnh lại** bằng tính năng **"Recovery Processing"** - được nói ở *Đặc tính hoạt động chung*
 
 <div class="post-img-post">
-    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled.png">
+    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled.png" loading="lazy">
  <br>
 Đặc tính độ ẩm
 </div>
@@ -87,7 +87,7 @@ Hoạt động trong dãy điện áp 2.2v đến 5.5v
 **Hoạt động tốt ở mức 3.3v** (tối ưu tiết kiệm điện với **ASIC** sensor)
 
 <div class="post-img-post">
-    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 1.png">
+    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 1.png" loading="lazy">
  <br>
 Đặc tính điện
 </div>
@@ -97,7 +97,7 @@ Thông số làm việc từ **-40 đến +80 độ C**
 
 Tuy nhiên, hoạt động tối ưu ít sai số ở **10 độ C đến 55 độ C**
 <div class="post-img-post">
-    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 2.png">
+    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 2.png" loading="lazy">
  <br>
 Đặc tính nhiệt độ
 </div>
@@ -120,7 +120,7 @@ Sau khi trở lại trạng thái hoạt động bình thường, **cảm biến
 **Hoạt động lâu dài trong điều kiện bất thường sẽ đẩy nhanh quá trình lão hóa của cảm biến.**
 
 <div class="post-img-post">
-    <img src="/img/2023-07-28-I2C-DHT20-STM32/dht20-working-conditions.png">
+    <img src="/img/2023-07-28-I2C-DHT20-STM32/dht20-working-conditions.png" loading="lazy">
  <br>
 Đặc tính hoạt động chung
 </div>
@@ -128,7 +128,7 @@ Sau khi trở lại trạng thái hoạt động bình thường, **cảm biến
 #### ⚙️Cấu hình chân cắm của DHT20
 **DHT20** có 2 chân nguồn `VCC`, `GND` và **2 chân giao tiếp I2C**
 <div class="post-img-post">
-    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 3.png">
+    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 3.png" loading="lazy">
  <br>
 Cấu hình chân cắm của DHT20
 </div>
@@ -136,7 +136,7 @@ Cấu hình chân cắm của DHT20
 #### ⚙️Bảng đặc tính tốc độ truyền I2C
 **DHT20 có 2 mode** lựa chọn tốc độ truyền khi giao tiếp I2C, tuy nhiên **khuyến nghị chọn Standard Mode**.
 <div class="post-img-post">
-    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 4.png">
+    <img src="/img/2023-07-28-I2C-DHT20-STM32/Untitled 4.png" loading="lazy">
  <br>
 Bảng đặc tính tốc độ truyền I2C
 </div>
