--- a/_posts/2020-01-06-esp8266.md
+++ b/_posts/2020-01-06-esp8266.md
@@ -7,7 +7,7 @@ bigimg:
   - "/img/C_Language/c_language.jpg"
 image: /img/2020-01-06-esp8266/esp8266.png
 tags: [c, esp8266, microcontroller, applications]
-category: lap-trinh-vi-dieu-khien
+category: Programming MCU
 ---
 Hi Friends! Hope you are doing well. I am back to give you a daily dose of useful information. Today, I'll discuss the details on the Introduction to ESP8266. It is a WiFi microchip module, introduced by Espressif Systems, that comes with both TCP/IP and [Microcontroller](https://en.wikipedia.org/wiki/Microcontroller) capability.
 
