--- a/_posts/2023-07-23-I2C-LCD-STM32.md
+++ b/_posts/2023-07-23-I2C-LCD-STM32.md
@@ -7,7 +7,7 @@ bigimg:
   - "/img/2023-07-23-I2C-LCD-STM32/cover-lcd.jpg"
 image: /img/2023-07-23-I2C-LCD-STM32/I2C-cover.jpg
 tags: [STM32F4, STM32, I2C, LCD1602, LCD2004, 4bit, 4-bit, Nibble, Big-Endian]
-category: lap-trinh-vi-dieu-khien
+category: Programming MCU
 gh-repo: bangnguyendev/KEIL-C-STM32F407
 # gh-badge: [star, watch, fork, follow]
 comments: true
