--- a/_posts/2023-07-28-I2C-DHT20-STM32.md
+++ b/_posts/2023-07-28-I2C-DHT20-STM32.md
@@ -7,7 +7,7 @@ bigimg:
   - "/img/2023-07-28-I2C-DHT20-STM32/cover-dht20.jpg"
 image: /img/2023-07-28-I2C-DHT20-STM32/avatar-dht20.jpg
 tags: [STM32F4, STM32, I2C, LCD1602, DTH20, Humidity, Temperature, nhiệt độ, độ ẩm]
-category: lap-trinh-vi-dieu-khien
+category: Programming MCU
 gh-repo: bangnguyendev/KEIL-C-STM32F407
 # gh-badge: [star, watch, fork, follow]
 comments: true
